@@ -1,8 +1,13 @@
+XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* New feature: allow selecting multiple files in the 'Open file' dialog
+
+
 2013 Dec 26 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 2.2.2
 * Bug fix: wrong brutal stop of a debug session on Fedora
-* Bug fix: side bars must not be expanded via clicking on desabled tabs
+* Bug fix: side bars must not be expanded via clicking on disabled tabs
 * Improvement: get rid of serialization/deserialization of the python files
   parser info cache
 * New feature: user selectable sorting order for the tabs in the navigation menu
